--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-bittensor>=7
-starlette>=0.30.0
-pydantic>=2
+bittensor==6.9.4
 rich>=13
 pytest>=8
 torch>=2
-numpy>=1
+numpy==1.26.4
 setuptools>=68
 huggingface_hub==0.24.6
 psutil==6.0.0
 wandb==0.17.8
 python-dotenv==1.0.1
 audiocraft==1.3.0
-taoverse==1.0.5
+taoverse==1.0.1
